@@ -1,5 +1,7 @@
 2005-05-26  Vincent Noel  <vnoel@cox.net>
 
+	* logrtns.c (ParseLine): Simplify.
+
 	* logview.c (CreateMainWin): Remove the signal for row activation.
 	* log_repaint.c: (handle_row_collapse_cb),
 	(handle_row_expansion_cb), (DrawLogLines): Free the expanded paths
